add index.html from previous design

--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
 
   <!-- Responsive viewport tag, tells small screens that it's responsive -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Toppz digital star wars themed trading cards">
+  <meta name="keywords" content="star wars, Toppz, trading cards">
 
-  <!-- Normalize.css, a cross-browser reset file -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css" rel="stylesheet">
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
-
-  <!-- Stylesheets -->
+  <link rel="stylesheet" href="flex-grid.css">
+  <link rel="stylesheet" href="main.css">
 
 </head>
 <body>
