add header to index page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 
 </head>
 <body>
+  <header class="container">
+    <h1>star wars characters</h1>
+    <p>incomplete list</p>
+  </header>
 
 </body>
 </html>
