header p must stay or will change placement but will use .cards for spacing in other cards

--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
   <meta name="description" content="Toppz digital star wars themed trading cards">
   <meta name="keywords" content="star wars, Toppz, trading cards">
 
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css" rel="stylesheet">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css">
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
-  <link rel="stylesheet" href="flex-grid.css">
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="css/flex-grid.css">
+  <link rel="stylesheet" href="css/main.css">
 
 </head>
 <body>
-  <header class="container">
-    <h1>star wars characters</h1>
-    <p>incomplete list</p>
+  <header class="row">
+    <div class="col-12">
+      <h1>star wars characters</h1>
+      <p>incomplete list</p>
+    </div>
   </header>
 
 </body>
