add section with article .card of ray

--- a/index.html
+++ b/index.html
@@ -18,11 +18,20 @@
 </head>
 <body>
   <header class="row">
-    <div class="col-12">
+    <div class="push-1"></div>
+    <div class="col-6">
       <h1>star wars characters</h1>
       <p>incomplete list</p>
     </div>
   </header>
+  <main>
+    <section>
+      <article class="card">
+        <img src="images/rey_square.png" alt="Ray Protagonist, from Tatooine">
+        <h2>Ray</h2>
+        <p>Protagonist, from Tatooine</p>
+      </article>
+    </section>
 
 </body>
 </html>
