section article .card of Finn

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
         <p>Protagonist, from Tatooine</p>
       </article>
     </section>
+    <section>
+      <article class="card">
+        <img src="images/finn_square.png" alt="Storm Trooper, befriends Ray">
+        <h2>Finn</h2>
+        <p>Storm Trooper, befriends Ray</p>
+      </article>
+    </section>
 
 </body>
 </html>
