section article .card Kylo:

--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
         <p>Storm Trooper, befriends Ray</p>
       </article>
     </section>
+    <section>
+      <article class="card">
+        <img src="images/kylo_square.png" alt="Kylo Main Villian, or is he?">
+        <h2>Kylo</h2>
+        <p>Main Villian, or is he?</p>
+      </article>
+    </section>
+  
 
 </body>
 </html>
