section article .card Poe

--- a/index.html
+++ b/index.html
@@ -46,7 +46,14 @@
         <p>Main Villian, or is he?</p>
       </article>
     </section>
-  
+    <section>
+      <article class="card">
+        <img src="images/poe_square.png" alt="Neutral pilot">
+        <h2>Poe</h2>
+        <p>Neutral pilot</p>
+      </article>
+    </section>
+    
 
 </body>
 </html>
