add section article .card chebacca

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </section>
     <section>
       <article class="card">
-        <img src="images/finn_square.png" alt="Storm Trooper, befriends Ray">
+        <img src="images/finn_square.png" alt="Finn Storm Trooper, befriends Ray">
         <h2>Finn</h2>
         <p>Storm Trooper, befriends Ray</p>
       </article>
@@ -48,9 +48,16 @@
     </section>
     <section>
       <article class="card">
-        <img src="images/poe_square.png" alt="Neutral pilot">
+        <img src="images/poe_square.png" alt=" Poe, Neutral pilot">
         <h2>Poe</h2>
         <p>Neutral pilot</p>
+      </article>
+    </section>
+    <section>
+      <article class="card">
+        <img src="images/chewbacc_square.png" alt="Chewbacca, A great first mate">
+        <h2>Chewbacca</h2>
+        <p>Agreat first mate</p>
       </article>
     </section>
     
