add section article .card yoda and close main

--- a/index.html
+++ b/index.html
@@ -60,7 +60,14 @@
         <p>Agreat first mate</p>
       </article>
     </section>
-    
+    <section>
+      <article class="card">
+        <img src="images/yoda_square.png" alt="Yoda Wise old jedi master">
+        <h2>Yoda</h2>
+        <p>Wise old jedi master</p>
+      </article>
+    </section>
+  </main>
 
 </body>
 </html>
