correction on chebacca img src

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </section>
     <section>
       <article class="card">
-        <img src="images/chewbacc_square.png" alt="Chewbacca, A great first mate">
+        <img src="images/chewbacca_square.png" alt="Chewbacca, A great first mate">
         <h2>Chewbacca</h2>
         <p>Agreat first mate</p>
       </article>
