--- a/index.html
+++ b/index.html
@@ -25,48 +25,52 @@
     </div>
   </header>
   <main>
-    <section>
-      <article class="card">
-        <img src="images/rey_square.png" alt="Ray Protagonist, from Tatooine">
-        <h2>Ray</h2>
-        <p>Protagonist, from Tatooine</p>
-      </article>
-    </section>
-    <section>
-      <article class="card">
-        <img src="images/finn_square.png" alt="Finn Storm Trooper, befriends Ray">
-        <h2>Finn</h2>
-        <p>Storm Trooper, befriends Ray</p>
-      </article>
-    </section>
-    <section>
-      <article class="card">
-        <img src="images/kylo_square.png" alt="Kylo Main Villian, or is he?">
-        <h2>Kylo</h2>
-        <p>Main Villian, or is he?</p>
-      </article>
-    </section>
-    <section>
-      <article class="card">
-        <img src="images/poe_square.png" alt=" Poe, Neutral pilot">
-        <h2>Poe</h2>
-        <p>Neutral pilot</p>
-      </article>
-    </section>
-    <section>
-      <article class="card">
-        <img src="images/chewbacca_square.png" alt="Chewbacca, A great first mate">
-        <h2>Chewbacca</h2>
-        <p>Agreat first mate</p>
-      </article>
-    </section>
-    <section>
-      <article class="card">
-        <img src="images/yoda_square.png" alt="Yoda Wise old jedi master">
-        <h2>Yoda</h2>
-        <p>Wise old jedi master</p>
-      </article>
-    </section>
+    <div class="row" id="set-one">
+      <section>
+        <article class="card col-3">
+          <img src="images/rey_square.png" alt="Ray Protagonist, from Tatooine">
+          <h2>Ray</h2>
+          <p>Protagonist, from Tatooine</p>
+        </article>
+      </section>
+      <section>
+        <article class="card col-3">
+          <img src="images/finn_square.png" alt="Finn Storm Trooper, befriends Ray">
+          <h2>Finn</h2>
+          <p>Storm Trooper, befriends Ray</p>
+        </article>
+      </section>
+      <section>
+        <article class="card">
+          <img src="images/kylo_square.png" alt="Kylo Main Villian, or is he?">
+          <h2>Kylo</h2>
+          <p>Main Villian, or is he?</p>
+        </article>
+      </section>
+    </div><!--/ .div #set-one -->
+    <div class="row" id="set-two">
+      <section>
+        <article class="card">
+          <img src="images/poe_square.png" alt=" Poe, Neutral pilot">
+          <h2>Poe</h2>
+          <p>Neutral pilot</p>
+        </article>
+      </section>
+      <section>
+        <article class="card">
+          <img src="images/chewbacca_square.png" alt="Chewbacca, A great first mate">
+          <h2>Chewbacca</h2>
+          <p>Agreat first mate</p>
+        </article>
+      </section>
+      <section>
+        <article class="card">
+          <img src="images/yoda_square.png" alt="Yoda Wise old jedi master">
+          <h2>Yoda</h2>
+          <p>Wise old jedi master</p>
+        </article>
+      </section>
+    </div><!-- / .div #set-two -->
   </main>
 
 </body>
