--- a/index.html
+++ b/index.html
@@ -14,15 +14,11 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
   <link rel="stylesheet" href="css/flex-grid.css">
   <link rel="stylesheet" href="css/main.css">
-
 </head>
 <body>
-  <header class="row">
-    <div class="push-1"></div>
-    <div class="col-6">
-      <h1>star wars characters</h1>
-      <p>incomplete list</p>
-    </div>
+  <header>
+        <h1>star wars characters</h1>
+        <p>incomplete list</p>
   </header>
   <main>
     <div class="row" id="set-one">
