--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
 </head>
 <body>
   <header>
-        <h1>star wars characters</h1>
-        <p>incomplete list</p>
+    <div class="container">
+      <!-- <div class="push-1"></div> -->
+      <h1>star wars characters</h1>
+      <p>incomplete list</p>
+    </div>
   </header>
   <main>
     <div class="row" id="set-one">
