--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <p>incomplete list</p>
     </div>
   </header>
-  <main>
+  <main class="grid">
     <div class="row" id="set-one">
       <section>
         <article class="card col-3">
