--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
   </header>
   <main class="grid">
-    <div class="row" id="set-one">
+    <div class="set">
       <section>
         <article class="card col-3">
           <img src="images/rey_square.png" alt="Ray Protagonist, from Tatooine">
@@ -47,7 +47,7 @@
         </article>
       </section>
     </div><!--/ .div #set-one -->
-    <div class="row" id="set-two">
+    <div class="set">
       <section>
         <article class="card">
           <img src="images/poe_square.png" alt=" Poe, Neutral pilot">
