--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
   <main class="grid">
     <div class="set">
       <section>
-        <article class="card col-3">
+        <article class="card">
           <img src="images/rey_square.png" alt="Ray Protagonist, from Tatooine">
           <h2>Ray</h2>
           <p>Protagonist, from Tatooine</p>
         </article>
       </section>
       <section>
-        <article class="card col-3">
+        <article class="card">
           <img src="images/finn_square.png" alt="Finn Storm Trooper, befriends Ray">
           <h2>Finn</h2>
           <p>Storm Trooper, befriends Ray</p>
