--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@
 </head>
 <body>
   <header>
-    <div class="container">
-      <!-- <div class="push-1"></div> -->
-      <h1>star wars characters</h1>
-      <p>incomplete list</p>
+    <div class="flex">
+      <div class="container">
+        <!-- <div class="push-1"></div> -->
+        <h1 class="txt">star wars characters</h1>
+        <p>incomplete list</p>
+      </div>
+      <div class="push"></div>
     </div>
   </header>
-  <main class="grid">
+  <main>
     <div class="set">
       <section>
         <article class="card">
